main/ruby-matrix: run tests without rake
To avoid unnecessary dependency on ruby-rake.

--- a/main/ruby-matrix/APKBUILD
+++ b/main/ruby-matrix/APKBUILD
@@ -12,25 +12,18 @@ arch="noarch"
 license="BSD-2-Clause AND Ruby"
 depends="ruby"
 makedepends="ruby-rdoc"
-checkdepends="
-	ruby-rake
-	ruby-test-unit
-	"
+checkdepends="ruby-test-unit"
 subpackages="$pkgname-doc"
 source="https://github.com/ruby/matrix/archive/v$pkgver/$_gemname-$pkgver.tar.gz"
 builddir="$srcdir/$_gemname-$pkgver"
-
-prepare() {
-	default_prepare
-	sed -i '/require .bundler/d' Rakefile
-}
 
 build() {
 	gem build $_gemname.gemspec
 }
 
 check() {
-	rake test
+	ruby -I lib -I test/lib -r helper \
+		-e "Dir.glob('./test/**/test_*.rb', &method(:require))" -- --verbose
 }
 
 package() {
