main/ruby-net-ftp: run tests without rake
To avoid unnecessary dependency on ruby-rake.

--- a/main/ruby-net-ftp/APKBUILD
+++ b/main/ruby-net-ftp/APKBUILD
@@ -11,7 +11,7 @@ url="https://github.com/ruby/net-ftp"
 arch="noarch"
 license="BSD-2-Clause AND Ruby"
 depends="ruby"
-checkdepends="ruby-rake ruby-test-unit"
+checkdepends="ruby-test-unit"
 makedepends="ruby-rdoc"
 subpackages="$pkgname-doc"
 source="https://github.com/ruby/net-ftp/archive/v$pkgver/$_gemname-$pkgver.tar.gz
@@ -19,17 +19,13 @@ source="https://github.com/ruby/net-ftp/archive/v$pkgver/$_gemname-$pkgver.tar.g
 	"
 builddir="$srcdir/$_gemname-$pkgver"
 
-prepare() {
-	default_prepare
-	sed -i '/require .bundler/d' Rakefile
-}
-
 build() {
 	gem build $_gemname.gemspec
 }
 
 check() {
-	rake test
+	ruby -I lib -I test/lib -r helper \
+		-e "Dir.glob('./test/**/test_*.rb', &method(:require))" -- --verbose
 }
 
 package() {
