--- a/main/ruby-net-smtp/APKBUILD
+++ b/main/ruby-net-smtp/APKBUILD
@@ -11,7 +11,7 @@ url="https://github.com/ruby/net-smtp"
 arch="noarch"
 license="BSD-2-Clause AND Ruby"
 depends="ruby"
-checkdepends="ruby-rake ruby-test-unit"
+checkdepends="ruby-test-unit"
 makedepends="ruby-rdoc"
 subpackages="$pkgname-doc"
 source="https://github.com/ruby/net-smtp/archive/v$pkgver/$_gemname-$pkgver.tar.gz
@@ -19,17 +19,12 @@ source="https://github.com/ruby/net-smtp/archive/v$pkgver/$_gemname-$pkgver.tar.
 	"
 builddir="$srcdir/$_gemname-$pkgver"
 
-prepare() {
-	default_prepare
-	sed -i '/require .bundler/d' Rakefile
-}
-
 build() {
 	gem build $_gemname.gemspec
 }
 
 check() {
-	rake test
+	ruby -I lib -e "Dir.glob('./test/**/test_*.rb', &method(:require))" -- --verbose
 }
 
 package() {
