main/ruby-augeas: rebuild against ruby 3.4
...and run tests in verbose mode.

--- a/main/ruby-augeas/APKBUILD
+++ b/main/ruby-augeas/APKBUILD
@@ -4,7 +4,7 @@
 pkgname=ruby-augeas
 _gemname=$pkgname
 pkgver=0.5.0
-pkgrel=14
+pkgrel=15
 pkgdesc="Ruby bindings for Augeas"
 url="https://augeas.net/"
 arch="all"
@@ -35,7 +35,7 @@ build() {
 }
 
 check() {
-	GEM_PATH='./dist' rake test
+	GEM_PATH='./dist' rake test TESTOPTS="--verbose"
 }
 
 package() {
