main/ruby-prime: run tests without rake
To avoid unnecessary dependency on ruby-rake.

--- a/main/ruby-prime/APKBUILD
+++ b/main/ruby-prime/APKBUILD
@@ -12,7 +12,6 @@ arch="noarch"
 license="BSD-2-Clause AND Ruby"
 depends="ruby"
 checkdepends="
-	ruby-rake
 	ruby-rbs
 	ruby-test-unit
 	ruby-test-unit-ruby-core
@@ -25,8 +24,6 @@ builddir="$srcdir/$_gemname-$pkgver"
 prepare() {
 	default_prepare
 
-	sed -i '/require .bundler/d' Rakefile
-
 	# This test is broken, it works only if "prime" is installed in /.
 	# (Cannot find type definitions for library prime)
 	rm test/test_rbs.rb
@@ -37,7 +34,8 @@ build() {
 }
 
 check() {
-	rake test
+	ruby -I lib -I test/lib -r helper \
+		-e "Dir.glob('./test/**/test_*.rb', &method(:require))" -- --verbose
 }
 
 package() {
