community/ruby-pkg-config: upgrade to 1.5.8
...and run tests in verbose mode.

--- a/community/ruby-pkg-config/APKBUILD
+++ b/community/ruby-pkg-config/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=ruby-pkg-config
 _gemname=pkg-config
-pkgver=1.5.7
-pkgrel=1
+pkgver=1.5.8
+pkgrel=0
 pkgdesc="pkg-config implemented by pure Ruby"
 url="https://github.com/ruby-gnome/pkg-config"
 arch="noarch"
@@ -25,7 +25,8 @@ check() {
 	# test_cflags*: pkg-config returns -I flags in a different order.
 	ruby test/run-test.rb \
 		--ignore-name test_cflags \
-		--ignore-name test_cflags_only_I
+		--ignore-name test_cflags_only_I \
+		--verbose
 }
 
 package() {
@@ -49,5 +50,5 @@ package() {
 }
 
 sha512sums="
-bf2199d7f5154701352b66d08a57af89919b914ed5d7ebd94b715b97a97405b67fbcabb4a34cd66e60a614268cfadbb8859ca8ee6e2e0274599f5921e209d6aa  ruby-pkg-config-1.5.7.tar.gz
+317864e2195e4d08476dfa84c14b744cf6fab37d56f8d77fac48e1ce31e1d73f4481bebfe29e0c9c9243957f8f360d90e7b57408e3976f55af6a0c455ba8e8c6  ruby-pkg-config-1.5.8.tar.gz
 "
