--- a/community/ruby-nokogiri/APKBUILD
+++ b/community/ruby-nokogiri/APKBUILD
@@ -70,17 +70,14 @@ build() {
 }
 
 check() {
-	local extpath=$(dirname dist/extensions/*/*/$_gemname-$pkgver/gem_make.out)
-
 	case "$CARCH" in
 		# Fix NotImplementedError: Compaction isn't available on this platform.
 		ppc64le) export NOKOGIRI_TEST_GC_LEVEL=major;;
 	esac
 
-	# Note: This is based on Fedora package.
-	LANG="C.UTF-8" RUBYLIB=".:dist/gems/$_gemname-$pkgver/lib:test:$extpath" ruby \
-		-e 'require "test/helper"' \
-		-e 'Dir.glob("test/**/test_*.rb") {|f| require f }'
+	LANG="C.UTF-8" GEM_PATH="dist" \
+	ruby -I lib -I test -r helper \
+		-e "Dir.glob('./test/**/test_*.rb', &method(:require))" -- --verbose
 }
 
 package() {
