--- a/community/ruby-tomlib/APKBUILD
+++ b/community/ruby-tomlib/APKBUILD
@@ -2,16 +2,16 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=ruby-tomlib
 _gemname=tomlib
-pkgver=0.7.2
-pkgrel=1
+pkgver=0.7.3
+pkgrel=0
 pkgdesc="Fast and standards-compliant TOML parser and generator for Ruby"
 url="https://github.com/kgiszczak/tomlib"
 arch="all"
 license="MIT"
-checkdepends="ruby-rspec"
+depends="ruby ruby-bigdecimal"
 makedepends="ruby-dev"
+checkdepends="ruby-rspec"
 source="https://github.com/kgiszczak/tomlib/archive/v$pkgver/ruby-tomlib-$pkgver.tar.gz
-	fix-requires.patch
 	no-simplecov.patch
 	"
 builddir="$srcdir/tomlib-$pkgver"
@@ -45,7 +45,6 @@ package() {
 }
 
 sha512sums="
-0e1ed1889d7b9cd63193baefb2de8a05f8715a63b59e61f74412871101d994eb5d9717af0ff7f4546fd9b96b8254ea610a49c97b2932ebf3f7a42568b8c3d412  ruby-tomlib-0.7.2.tar.gz
-cb9145111d7de37e74c528583be7818359d94793fa6f19907c9c9a123b85b10b75a963f3dfc3db97e7ebf8051097d43fb276ccfca05f3bed327ed4bd2e28ccd0  fix-requires.patch
+0f0ec24dd174566753a3171128686943c2730fbfa28cb887ebbabad3e1f4106f8bd5a5bce8412b423c74d8137d23ffc798f711bc244ea0565c5c5086669be98d  ruby-tomlib-0.7.3.tar.gz
 5f3a9c3531d7f9cfa5ffe06701e3c732082951ffabbab6a8dc4181172bcffdbfc97fdb3218d2a98c828855fe19f3db2088c6786f98fb9ec16cfd397a727e5596  no-simplecov.patch
 "
