community/ruby-ox: upgrade to 2.14.19

--- a/community/ruby-ox/APKBUILD
+++ b/community/ruby-ox/APKBUILD
@@ -2,15 +2,16 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=ruby-ox
 _gemname=${pkgname#ruby-}
-pkgver=2.14.18
-pkgrel=1
+pkgver=2.14.19
+pkgrel=0
 pkgdesc="A fast XML parser and object serializer for Ruby"
 url="https://github.com/ohler55/ox"
 # armhf,armv7: fails to build (invalid storage class for function ...)
 arch="all !armhf !armv7"
 license="MIT"
-checkdepends="ruby ruby-test-unit"
+depends="ruby ruby-bigdecimal"
 makedepends="ruby-dev"
+checkdepends="ruby-test-unit"
 source="$pkgname-$pkgver.tar.gz::https://github.com/ohler55/$_gemname/archive/v$pkgver.tar.gz
 	gemspec.patch
 	"
@@ -55,6 +56,6 @@ package() {
 }
 
 sha512sums="
-9be6c2c6a5e0bc02ec86b1495455112930737d74c1771098b68089e45c2acf897c94a8c8c0b9fdc70ccf584a692eb6aece440d4f7bece9d75bde1cea595853dc  ruby-ox-2.14.18.tar.gz
+db502e62be78086df8ee6499d0c26260a9d93b5c0a7460e454a80d7a41066374bc802bcebe83553d5f955c76692fd953914fba84a83f40c135cdbb251dea13b4  ruby-ox-2.14.19.tar.gz
 0dfdc63ae24d2293f3bc2cab05264b054c16096dc26602f4ac896d7a0bcf4478f1d2e19dd833577fb441f8a68a06e17a817c64fdfb93d660da0f70eb4ebe3334  gemspec.patch
 "
