community/ruby-webrick: upgrade to 1.9.1
...and run tests in verbose mode.

--- a/community/ruby-webrick/APKBUILD
+++ b/community/ruby-webrick/APKBUILD
@@ -2,15 +2,19 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=ruby-webrick
 _gemname=webrick
-pkgver=1.8.1
-pkgrel=2
+pkgver=1.9.1
+pkgrel=0
 pkgdesc="HTTP server toolkit for Ruby"
 url="https://github.com/ruby/webrick"
 arch="noarch"
 license="BSD-2-Clause"
 depends="ruby"
-checkdepends="ruby-rake ruby-test-unit"
 makedepends="ruby-rdoc"
+checkdepends="
+	ruby-rake
+	ruby-test-unit
+	ruby-test-unit-ruby-core
+	"
 subpackages="$pkgname-doc"
 source="https://github.com/ruby/webrick/archive/v$pkgver/ruby-webrick-$pkgver.tar.gz
 	gemspec.patch
@@ -27,7 +31,7 @@ build() {
 }
 
 check() {
-	rake test
+	rake test TESTOPTS="--verbose"
 }
 
 package() {
@@ -53,6 +57,6 @@ doc() {
 }
 
 sha512sums="
-21cb396887025f85cfe04868e7fa7ef039809ca42a3acadfe1decb4dcd02eeeb3c9163e970324b56a9e0eb6202d971370af56e200c69de2d224c1941f866400c  ruby-webrick-1.8.1.tar.gz
+c680e30275dabc309b03f6353410b69e7c543701ad322cb32cf938fc42bf234ca17d26ddd0da09c8484ec78661897ce5bcf99d94dcf1856b31d4803793ef7ab3  ruby-webrick-1.9.1.tar.gz
 5c657602228ba5aef4c272b75bc5d7c42855876811a49a7736bfa72b00d65a2bb550ea76ffcc2bc1e2ef9575796f5981eadd97cc92b1f3bf06c0105b8d166222  gemspec.patch
 "
