community/opennebula: rebuild against ruby 3.4

--- a/community/opennebula/APKBUILD
+++ b/community/opennebula/APKBUILD
@@ -3,13 +3,14 @@
 # TODO: Add server components.
 pkgname=opennebula
 pkgver=6.10.0
-pkgrel=0
+pkgrel=1
 pkgdesc="OpenNebula (currenty empty, install opennebula-tools instead)"
 url="https://opennebula.io"
 arch="noarch"
 license="Apache-2.0"
 _depends_ruby="
 	ruby
+	ruby-csv
 	ruby-ipaddress
 	ruby-nokogiri
 	ruby-parse-cron
