community/ronn: upgrade to 0.10.1 and enable check

--- a/community/ronn/APKBUILD
+++ b/community/ronn/APKBUILD
@@ -3,8 +3,8 @@
 # Note: This project is basically dead, but it's still needed for some packages.
 pkgname=ronn
 _gemname=$pkgname-ng
-pkgver=0.9.1
-pkgrel=4
+pkgver=0.10.1
+pkgrel=0
 pkgdesc="Convert Markdown files to manpages"
 url="https://github.com/apjanke/ronn-ng"
 arch="noarch"
@@ -13,6 +13,7 @@ depends="
 	groff
 	ruby
 	ruby-kramdown
+	ruby-kramdown-parser-gfm
 	ruby-mustache
 	ruby-nokogiri
 	"
@@ -21,15 +22,8 @@ checkdepends="
 	ruby-test-unit
 	"
 subpackages="$pkgname-doc"
-source="https://github.com/apjanke/$_gemname/archive/v$pkgver/$_gemname-$pkgver.tar.gz
-	fix-ruby-3.1-compat.patch
-	mustache-1.X.patch
-	"
+source="https://github.com/apjanke/$_gemname/archive/v$pkgver/$_gemname-$pkgver.tar.gz"
 builddir="$srcdir/$_gemname-$pkgver"
-# FIXME
-#-<p>or when <var>WORD</var> has a <dot.> or <colon>.</colon></dot.></p>
-#+<p>or when <var>WORD</var> has a <dot.> or <var>colon</var>.</dot.></p>
-options="!check"
 
 build() {
 	gem build $_gemname.gemspec
@@ -60,11 +54,9 @@ package() {
 	cd "$gemdir"
 	rm -r cache build_info doc extensions plugins
 	cd "$geminstdir"
-	rm -r test man Rakefile [A-Z][A-Z][A-Z]*
+	rm -r man Rakefile [A-Z][A-Z][A-Z]*
 }
 
 sha512sums="
-03d6856598740ff670a500b182d0be84b584c98245e81b605de6c126b79680be48d2ed18d4cf28252c0a82883b4740ae58c584e977d3f0a9480082a9eb560a9a  ronn-ng-0.9.1.tar.gz
-995ba17153208a57d09b2666d70e501735bf3576cb5938e3c6d76335e89fef688a500ad6a8901ae52730f27cd20d541e936f3a1aa4344125f4047aeea6c3792c  fix-ruby-3.1-compat.patch
-4242708d1fb857bfd6c2d7f05ec9f51a0a1ab323aa9fef1a8dad13d5f54271e04acbf99cbf62a8784e4483041f4b72427d6ee9a4c260ba50068f64f0fece1757  mustache-1.X.patch
+3f6ee5355c7a19d5cb04c1b677028dd13ad2ff620acdb2e83d9b6f154a7b1e7b5a77ea0bcfbcef4bbb46a60b1c0fbc52fda079ff860c83a71f89b8fed0b83665  ronn-ng-0.10.1.tar.gz
 "
