community/unit: rebuild against ruby 3.4

--- a/community/unit/APKBUILD
+++ b/community/unit/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Andy Postnikov <apostnikov@gmail.com>
 pkgname=unit
 pkgver=1.34.2
-pkgrel=0
+pkgrel=1
 pkgdesc="NGINX Unit is a dynamic web application server"
 url="https://unit.nginx.org/"
 arch="all"
@@ -48,6 +48,9 @@ done
 _modules_dir="/usr/lib/unit/modules"
 
 build() {
+	# TODO: Remove after https://github.com/nginx/unit/issues/1525 is fixed.
+	export CFLAGS="$CFLAGS -Wno-error=deprecated-declarations"
+
 	./configure \
 		--prefix="/usr" \
 		--localstatedir="/var" \
