community/ruby-ffi: add ruby-bigdecimal to checkdepends
bigdecimal is not part of the default gems starting from Ruby 3.4.0.

--- a/community/ruby-ffi/APKBUILD
+++ b/community/ruby-ffi/APKBUILD
@@ -8,8 +8,15 @@ pkgdesc="Ruby FFI library"
 url="https://github.com/ffi/ffi"
 arch="all"
 license="BSD-3-Clause"
-checkdepends="ruby-rspec"
-makedepends="libffi-dev ruby ruby-dev"
+makedepends="
+	libffi-dev
+	ruby
+	ruby-dev
+	"
+checkdepends="
+	ruby-bigdecimal
+	ruby-rspec
+	"
 install="$pkgname.post-install"
 source="$pkgname-$pkgver.tar.gz::https://github.com/ffi/$_gemname/archive/v$pkgver.tar.gz
 	musl-compat.patch
