community/ruby-liquid: add ruby-bigdecimal to depends
bigdecimal is not part of the default gems starting from Ruby 3.4.0.

--- a/community/ruby-liquid/APKBUILD
+++ b/community/ruby-liquid/APKBUILD
@@ -9,8 +9,14 @@ pkgdesc="A secure, non-evaling end user template engine with aesthetic markup"
 url="https://shopify.github.io/liquid/"
 arch="noarch"
 license="MIT"
-depends="ruby"
-checkdepends="ruby-minitest ruby-rake"
+depends="
+	ruby
+	ruby-bigdecimal
+	"
+checkdepends="
+	ruby-minitest
+	ruby-rake
+	"
 source="https://github.com/Shopify/liquid/archive/v$pkgver/$pkgname-$pkgver.tar.gz
 	tests-disable-stack-profiler.patch
 	tests-disable-liquid-c.patch
