community/ruby-mathematical: add ruby-base64 to depends
base64 is not part of the default gems starting from Ruby 3.4.0

--- a/community/ruby-mathematical/APKBUILD
+++ b/community/ruby-mathematical/APKBUILD
@@ -8,7 +8,11 @@ pkgdesc="Convert mathematical equations to SVGs, PNGs, or MathML"
 url="https://www.gjtorikian.com/mathematical/"
 arch="all"
 license="MIT"
-depends="ruby ruby-enum"
+depends="
+	ruby
+	ruby-base64
+	ruby-enum
+	"
 makedepends="
 	cmake
 	lasem-dev
