community/ruby-net-ldap: add ruby-base64 to depends
base64 is not part of the default gems starting from Ruby 3.4.0.

--- a/community/ruby-net-ldap/APKBUILD
+++ b/community/ruby-net-ldap/APKBUILD
@@ -8,8 +8,14 @@ pkgdesc="Pure Ruby LDAP library"
 url="https://github.com/ruby-ldap/ruby-net-ldap"
 arch="noarch"
 license="MIT"
-depends="ruby"
-checkdepends="ruby-bundler ruby-dev"
+depends="
+	ruby
+	ruby-base64
+	"
+checkdepends="
+	ruby-bundler
+	ruby-dev
+	"
 source="https://github.com/ruby-ldap/$pkgname/archive/v$pkgver/$pkgname-$pkgver.tar.gz
 	gemspec.patch
 	"
