community/ruby-rbvmomi: add ruby-base64 to depends
base64 is not part of the default gems starting from Ruby 3.4.0.

--- a/community/ruby-rbvmomi/APKBUILD
+++ b/community/ruby-rbvmomi/APKBUILD
@@ -8,8 +8,17 @@ pkgdesc="Ruby interface to the VMware vSphere API"
 url="https://github.com/vmware-archive/rbvmomi"
 arch="noarch"
 license="MIT"
-depends="ruby ruby-builder ruby-nokogiri ruby-optimist"
-checkdepends="ruby-rake ruby-test-unit"
+depends="
+	ruby
+	ruby-base64
+	ruby-builder
+	ruby-nokogiri
+	ruby-optimist
+	"
+checkdepends="
+	ruby-rake
+	ruby-test-unit
+	"
 source="https://github.com/vmware-archive/rbvmomi/archive/v$pkgver/$_gemname-$pkgver.tar.gz
 	remove-extra-test-deps.patch
 	"
