community/ruby-rmagick: add ruby-observer to depends
observer is not part of the default gems starting from Ruby 3.4.0.

--- a/community/ruby-rmagick/APKBUILD
+++ b/community/ruby-rmagick/APKBUILD
@@ -9,7 +9,10 @@ pkgdesc="Ruby bindings for ImageMagick"
 url="https://github.com/rmagick/rmagick"
 arch="all"
 license="MIT"
-depends="ghostscript-fonts"
+depends="
+	ghostscript-fonts
+	ruby-observer
+	"
 makedepends="
 	imagemagick-dev
 	ruby
