--- a/community/ruby-concurrent-ruby/APKBUILD
+++ b/community/ruby-concurrent-ruby/APKBUILD
@@ -13,6 +13,7 @@ makedepends="ruby-dev ruby-rake ruby-rake-compiler"
 checkdepends="ruby-rspec ruby-timecop"
 subpackages="$pkgname-ext"
 source="$pkgname-$pkgver.tar.gz::https://github.com/ruby-concurrency/$_gemname/archive/v$pkgver.tar.gz
+	remove-dependency-on-logger.patch
 	gemspecs.patch
 	rakefile-remove-dock.patch
 	rakefile-java-version.patch
@@ -95,6 +96,7 @@ ext() {
 
 sha512sums="
 d08a20ec465429875ddb1b1bcc7a75e74cfdb3113e4141e7d7f690ddd6fe50af978b7911bf0457a3e535fd79e463e423c34d23f77e645ecb6dd69704b17fdad6  ruby-concurrent-ruby-1.3.4.tar.gz
+3d3a0fbd2c83a79d4f618fdcad8629ba63ef3b08f2d1a2b21efc7d3ac9b092e967a6a93950b24d1ad66e23313f3f8ab79278b8481f2e6426ef44dfb8273ecffa  remove-dependency-on-logger.patch
 2db9dbd791f52647c7ba66b6537575ccbaa402de0316169cfc887f8f25093f0507e144eca86a4f1baaefc9cd268474460ed1ea09713b5ffb354642c036bc46f0  gemspecs.patch
 964384305dbe7d0578e80117587235acd2ab8e812aaa9353a13157ad92574b6db632fe96b144950e64377f94af26fa2ec1bad1c829493c48d379c0c91e1282b7  rakefile-remove-dock.patch
 f3bb000a843277719a687aebe6dd582aa590bd9456b3a067be4bed2efe5026bf8b794aea293dc359c721ece67e696885452a80daf6a80d69907df9098abd69a7  rakefile-java-version.patch
