community/ruby-activesupport: add ruby-{base64,bigdecimal,drb} to depends
base64, bigdecimal, and drb are not part of the default gems starting from Ruby 3.4.0

--- a/community/ruby-activesupport/APKBUILD
+++ b/community/ruby-activesupport/APKBUILD
@@ -10,8 +10,11 @@ arch="noarch"
 license="MIT"
 depends="
 	ruby
+	ruby-base64
+	ruby-bigdecimal
 	ruby-connection_pool
 	ruby-concurrent-ruby
+	ruby-drb
 	ruby-i18n
 	ruby-minitest
 	ruby-tzinfo
