main/bash-completion: add doas completion
Upstream is very slowly and didn't merge the PR since June 2024.

Closes https://gitlab.alpinelinux.org/alpine/aports/-/issues/16453

--- a/main/bash-completion/APKBUILD
+++ b/main/bash-completion/APKBUILD
@@ -13,7 +13,9 @@ depends="bash"
 makedepends="autoconf automake bc grep iputils musl-utils procps psmisc sed usbutils"
 checkdepends="py3-pexpect py3-pytest"
 subpackages="$pkgname-dev $pkgname-doc"
-source="https://github.com/scop/bash-completion/releases/download/$pkgver/bash-completion-$pkgver.tar.xz"
+source="https://github.com/scop/bash-completion/releases/download/$pkgver/bash-completion-$pkgver.tar.xz
+	add-doas-completion.patch
+	"
 
 # Provided by other packages
 _conflicting="
@@ -96,4 +98,5 @@ package() {
 
 sha512sums="
 3711d6cb53cedff94efca0325479ac73f40b536fce250dbcc18ef120a8d0d2248f086ca26e245d163e6058d1b1087d57ced041317163d0e25592d6cb7acbc102  bash-completion-2.16.0.tar.xz
+39f49a43a660049721a80bccb6a6cf63916e605ab9d33b5bbadf99256650f5ed2e0caa38b22d23b79b9cd3975cb297f7b5d9e12353202eecc01253dd9780002a  add-doas-completion.patch
 "
