--- a/testing/py3-dbus-fast/APKBUILD
+++ b/testing/py3-dbus-fast/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Oleg Titov <oleg.titov@gmail.com>
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
 pkgname=py3-dbus-fast
-pkgver=2.24.4
+pkgver=2.33.0
 pkgrel=0
 pkgdesc="A faster version of dbus-next"
 url="https://github.com/bluetooth-devices/dbus-fast/"
@@ -22,6 +22,7 @@ makedepends="
 checkdepends="
 	py3-pytest
 	py3-pytest-asyncio
+	py3-pytest-codspeed
 	py3-pytest-cov
 	py3-pytest-timeout
 	"
@@ -46,9 +47,11 @@ package() {
 	python3 -m installer -d "$pkgdir" \
 		.dist/*.whl
 
-	install -Dm644 README.md -t "$pkgdir"/usr/share/doc/$pkgname
+	install -Dm644 README.md -t "$pkgdir"/usr/share/doc/"$pkgname"
+	install -Dm644 LICENSE -t "$pkgdir"/usr/share/licenses/"$pkgname"
+
 }
 
 sha512sums="
-e08a1b8c028cf33f7055621b502ffdffb1d9c79875b9f9d05afca401cdc583ae97bb029706002ad0e94e2ce8ccf3a992fe9cc9c023e87f64d04bb581b2e9f263  py3-dbus-fast-2.24.4.tar.gz
+6a8306c624d46aa006e5d96bca7a7300a43742a056d47f0dce553ba2017df8b73d45743a6a10838331a5388712c57d310defe3354df8daedfa6f44c445c6a819  py3-dbus-fast-2.33.0.tar.gz
 "
