community/modemmanager: add debug subpackage

--- a/community/modemmanager/APKBUILD
+++ b/community/modemmanager/APKBUILD
@@ -30,6 +30,7 @@ subpackages="
 	$pkgname-lang
 	$pkgname-doc
 	libmm-glib:libmm
+	$pkgname-dbg
 	$pkgname-dev
 	$pkgname-openrc
 	$pkgname-bash-completion
