testing/cataclysm-dda: fix version format
Make it compliant to the version format that will be enforced by apk3
in the future.

Ref https://gitlab.alpinelinux.org/alpine/apk-tools/-/issues/10972

--- a/testing/cataclysm-dda/APKBUILD
+++ b/testing/cataclysm-dda/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Joshua Murphy <joshuamurphy@posteo.net>
 maintainer="Joshua Murphy <joshuamurphy@posteo.net>"
 pkgname=cataclysm-dda
-pkgver=0.h
+pkgver=0h
 _pkgver=0.H
 pkgrel=0
 _pkgdesc="A post-apocalyptic roguelike"
