--- a/community/qt6-qtscxml/APKBUILD
+++ b/community/qt6-qtscxml/APKBUILD
@@ -1,10 +1,8 @@
-# Contributor: Bart Ribbers <bribbers@disroot.org>
-
 # The group tag is just to easily find this APKBUILD by some scripts for automation
 # group=qt6
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=qt6-qtscxml
-pkgver=6.8.1
+pkgver=6.8.2
 pkgrel=0
 pkgdesc="Static and runtime integration of SCXML models into Qt6 code"
 url="https://qt.io/"
@@ -12,13 +10,26 @@ arch="all"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="
 	qt6-qtbase-dev
-	qt6-qtdeclarative-dev
+	qt6-qtbase-private-dev
 	"
 makedepends="$depends_dev
 	cmake
 	perl
 	samurai
 	"
+case "$CARCH" in
+	armhf) ;;
+	*)
+		depends_dev="$depends_dev
+			qt6-qtdeclarative-dev
+			"
+		makedepends="$makedepends
+			qt6-qtdeclarative-dev
+			qt6-qtdeclarative-private-dev
+			"
+		;;
+esac
+
 subpackages="$pkgname-dev"
 options="!check" # No tests
 builddir="$srcdir/qtscxml-everywhere-src-${pkgver/_/-}"
@@ -50,5 +61,5 @@ dev() {
 }
 
 sha512sums="
-294d830569f05450a57fd30741707f7c6d42d07ad9ae03840e41c1382f72f8d3408d9cc1ba16145ede51f5ca510cef87b0ca298991c7697a7c2b58b0db8f8f29  qtscxml-everywhere-src-6.8.1.tar.xz
+9f155f94f8250ac97e1bbaec2034aac300c3fa254ed0b6845f57d521138d43b076c8cec8aa8384891969665d54f5994b5c0a78954406ef620ae23656d739b0ec  qtscxml-everywhere-src-6.8.2.tar.xz
 "
