--- a/community/qt6-qtsensors/APKBUILD
+++ b/community/qt6-qtsensors/APKBUILD
@@ -1,10 +1,8 @@
-# Contributor: Bart Ribbers <bribbers@disroot.org>
-
 # The group tag is just to easily find this APKBUILD by some scripts for automation
 # group=qt6
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=qt6-qtsensors
-pkgver=6.8.1
+pkgver=6.8.2
 pkgrel=0
 pkgdesc="Provides access to sensor hardware and motion gesture recognition"
 url="https://qt.io/"
@@ -12,7 +10,7 @@ arch="all"
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="
 	qt6-qtbase-dev
-	qt6-qtdeclarative-dev
+	qt6-qtbase-private-dev
 	qt6-qtsvg-dev
 	"
 makedepends="$depends_dev
@@ -20,6 +18,18 @@ makedepends="$depends_dev
 	perl
 	samurai
 	"
+case "$CARCH" in
+	armhf) ;;
+	*)
+		depends_dev="$depends_dev
+			qt6-qtdeclarative-dev
+			"
+		makedepends="$makedepends
+			qt6-qtdeclarative-dev
+			"
+		;;
+esac
+
 subpackages="$pkgname-dev"
 
 case $pkgver in
@@ -61,5 +71,5 @@ dev() {
 }
 
 sha512sums="
-565a332120c134099e8fbc7ba3fd1073046d512d8b5523bde3a2f4d353febc6a2a3839410f290ddeff05341fe37b0c8bd4dc4d0e990fa4c43918b944f10884e3  qtsensors-everywhere-src-6.8.1.tar.xz
+a0463557c1531d8514948eff81b83397b7f391c8fa992f95539f1a3b6a9559c2dddb0971a12e4d2bd393b57944ead0afe0901b59bfb0defa7f07aae2b3c9a0f2  qtsensors-everywhere-src-6.8.2.tar.xz
 "
