testing/pipeline: improve aport
* use abuild-meson
* use patch for `cargo auditable --frozen`
* don't force CARGO_HOME
* run check()

--- a/testing/pipeline/APKBUILD
+++ b/testing/pipeline/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Matthias Ahouansou <matthias@ahouansou.cz>
 pkgname=pipeline
 pkgver=2.1.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Watch YouTube and PeerTube videos in one place"
 url="https://gitlab.com/schmiddi-on-mobile/pipeline"
 arch="all"
@@ -23,28 +23,34 @@ makedepends="
 subpackages="$pkgname-doc $pkgname-lang"
 source="
 	$pkgname-$pkgver.tar.gz::https://gitlab.com/schmiddi-on-mobile/pipeline/-/archive/v$pkgver/pipeline-v$pkgver.tar.gz
+	cargo-auditable.patch
 "
-options="net !check" # no tests
+options="net"
 builddir="$srcdir/$pkgname-v$pkgver"
 
 prepare() {
 	default_prepare
 
-	meson setup build --prefix /usr
-	sed -i "s/cargo build/cargo auditable build --frozen/" build/build.ninja
-	CARGO_HOME="$builddir"/build/cargo-home cargo fetch --target="$CTARGET" --locked
+	cargo fetch --target="$CTARGET" --locked
 }
 
 build() {
-	meson compile -C build
+	abuild-meson \
+		. output
+	meson compile -C output
+}
+
+check() {
+	meson test --no-rebuild --print-errorlogs -C output
 }
 
 package() {
-	meson install -C build --no-rebuild --destdir "$pkgdir"
+	DESTDIR="$pkgdir" meson install --no-rebuild -C output
 
-	install -Dm 644 LICENSE "$pkgdir"/usr/share/licenses/"$pkgname"/LICENSE
+	install -Dm644 LICENSE -t "$pkgdir"/usr/share/licenses/$pkgname/
 }
 
 sha512sums="
 e5830fa678d5030f9f1e9276f9c0f30573bdbaa38e5e09c8d0ffa2d143b35dd5e7d7c7c0c441c8c75e57a5055131d489f4dc85c5f73c6d0d14a916c23def9183  pipeline-2.1.1.tar.gz
+e6faae8a164e818b87d5366a9d495a953e40fd37e801253daff253cc9d9c42a8893129aecb2e4f3fba9f43f3a0646ffebca5e48ce67defeb9fdf3ea5a0844e7f  cargo-auditable.patch
 "
