main/busybox: simplify check()

--- a/main/busybox/APKBUILD
+++ b/main/busybox/APKBUILD
@@ -217,11 +217,9 @@ check() {
 	# Set VERBOSE to see expected outcome of each test (runtest -v flag).
 	# Set DEBUG to enable command trace (see testsuite/testing.sh).
 
-	cd "$_dyndir"
-	SKIP_KNOWN_BUGS=1 make -C "$builddir" O="$PWD" V=1 check CONFIG_EXTRA_CFLAGS="$_extra_cflags" CONFIG_EXTRA_LDLIBS="$_extra_libs"
+	SKIP_KNOWN_BUGS=1 make KBUILD_OUTPUT="$_dyndir" V=1 check CONFIG_EXTRA_CFLAGS="$_extra_cflags" CONFIG_EXTRA_LDLIBS="$_extra_libs"
 
-	cd "$_dyndir_extras"
-	SKIP_KNOWN_BUGS=1 make -C "$builddir" O="$PWD" V=1 check CONFIG_EXTRA_CFLAGS="$_extra_cflags" CONFIG_EXTRA_LDLIBS="$_extra_libs"
+	SKIP_KNOWN_BUGS=1 make KBUILD_OUTPUT="$_dyndir_extras" V=1 check CONFIG_EXTRA_CFLAGS="$_extra_cflags" CONFIG_EXTRA_LDLIBS="$_extra_libs"
 }
 
 package() {
