community/freerdp: enable tests

--- a/community/freerdp/APKBUILD
+++ b/community/freerdp/APKBUILD
@@ -7,7 +7,6 @@ pkgdesc="FreeRDP client"
 url="https://www.freerdp.com/"
 arch="all"
 license="Apache-2.0"
-options="!check" # As of 2.0.0_rc4 no test suite is available
 makedepends="
 	alsa-lib-dev
 	bsd-compat-headers
@@ -36,7 +35,9 @@ makedepends="
 	webkit2gtk-4.1-dev
 	"
 subpackages="$pkgname-doc $pkgname-dev $pkgname-libs"
-source="$pkgname-$pkgver.tar.gz::https://github.com/FreeRDP/FreeRDP/archive/$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/FreeRDP/FreeRDP/archive/$pkgver.tar.gz
+	fix-test.patch
+	"
 
 builddir="$srcdir"/$_pkgname-$pkgver
 
@@ -96,6 +97,7 @@ build() {
 		-DCMAKE_BUILD_TYPE=MinSizeRel \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
+		-DBUILD_TESTING="$(want_check && echo ON || echo OFF)" \
 		-DUWAC_FORCE_STATIC_BUILD=ON \
 		-DWITH_BINARY_VERSIONING=ON \
 		-DWITH_ALSA=ON \
@@ -122,6 +124,10 @@ build() {
 	cmake --build build
 }
 
+check() {
+	ctest --test-dir build
+}
+
 package() {
 	DESTDIR="$pkgdir" cmake --install build
 }
@@ -133,4 +139,5 @@ libs() {
 
 sha512sums="
 f9a84d60198f69ecea477e1a63c635674cac4952c9897586f85f4e2a6e9445de09cf9736cd51e274a29a24d2ec8eb1a0d00b9cc0caa55839a205790e261f29af  freerdp-3.14.1.tar.gz
+54e6018791205b0fc89d95f2d56ccfda067063f668d459f7f5ecd4d53c977afa597e7661caa597302fe5b222404fbf51db34d875807cda247c00f7c8751f9924  fix-test.patch
 "
