main/ngtcp2: split static

--- a/main/ngtcp2/APKBUILD
+++ b/main/ngtcp2/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=ngtcp2
 pkgver=1.11.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Implementation of IETF QUIC protocol"
 url="https://nghttp2.org/ngtcp2/"
 arch="all"
@@ -14,6 +14,7 @@ makedepends="
 	"
 checkdepends="cunit-dev"
 subpackages="
+	$pkgname-static
 	$pkgname-dev
 	$pkgname-gnutls
 	"
