community/nghttp3: split static

--- a/community/nghttp3/APKBUILD
+++ b/community/nghttp3/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=nghttp3
 pkgver=1.8.0
-pkgrel=0
+pkgrel=1
 pkgdesc="HTTP/3 library written in C"
 url="https://github.com/ngtcp2/nghttp3"
 arch="all"
 license="MIT"
 makedepends="cmake samurai"
-subpackages="$pkgname-dev"
+subpackages="$pkgname-static $pkgname-dev"
 source="https://github.com/ngtcp2/nghttp3/releases/download/v$pkgver/nghttp3-$pkgver.tar.gz"
 
 build() {
