community/sway: declare -portalsconf subpackage as noarch
This package only includes a configuration file; is has nothing
architecture-specific.

--- a/community/sway/APKBUILD
+++ b/community/sway/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Michał Polański <michal@polanski.me>
 pkgname=sway
 pkgver=1.10.1
-pkgrel=0
+pkgrel=1
 pkgdesc="i3-compatible window manager for Wayland"
 url="https://swaywm.org/"
 license="MIT"
@@ -35,7 +35,7 @@ subpackages="
 	$pkgname-bash-completion
 	$pkgname-zsh-completion
 	$pkgname-fish-completion
-	$pkgname-portalsconf
+	$pkgname-portalsconf::noarch
 	swaybar
 	swaynag
 	"
