community/sbcl: upgrade to 2.5.3

--- a/community/sbcl/APKBUILD
+++ b/community/sbcl/APKBUILD
@@ -4,7 +4,7 @@
 # Maintainer: Will Sinatra <wpsinatra@gmail.com>
 maintainer="Will Sinatra <wpsinatra@gmail.com>"
 pkgname=sbcl
-pkgver=2.5.1
+pkgver=2.5.3
 pkgrel=0
 pkgdesc="Steel Bank Common Lisp"
 url="http://www.sbcl.org/"
@@ -21,7 +21,7 @@ makedepends="
 	sbcl-bootstrap
 	zstd-dev
 	"
-subpackages="$pkgname-doc"
+subpackages="$pkgname-doc $pkgname-source:_source"
 source="$pkgname-$pkgver.tar.bz2::https://prdownloads.sourceforge.net/sbcl/sbcl-$pkgver-source.tar.bz2
 	ppc-musl.patch
 	musl-time64.patch
@@ -49,6 +49,11 @@ build() {
 	esac
 
 	GNUMAKE=make ./make.sh sbcl --prefix=/usr $conf
+
+	# Setting the sbcl source location enables more granular deep introspection tooling, like sly
+	HOME="$builddir" src/runtime/sbcl --core output/sbcl.core --no-sysinit --no-userinit \
+					 --eval '(sb-ext:set-sbcl-source-location "/usr/share/sbcl/source/")' \
+					 --eval '(sb-ext:save-lisp-and-die "output/sbcl.core")'
 }
 
 package() {
@@ -60,12 +65,22 @@ package() {
 	install -Dm644 COPYING \
 		"$pkgdir"/usr/share/licenses/$pkgname/LICENSE.txt
 
-	rmdir "$pkgdir"/usr/share/doc/$pkgname/html \
-		"$pkgdir"/usr/share/info 2>/dev/null || true
+	rmdir "$pkgdir"/usr/share/doc/$pkgname/html 2>/dev/null || true
+	rmdir "$pkgdir"/usr/share/info 2>/dev/null || true
+}
+
+_source() {
+	pkgdesc="sbcl source code"
+
+	mkdir -p "$subpkgdir/usr/share/sbcl/source"
+
+	# Source code files are needed for deep introspection tools, like Sly, to operate.
+	cp -r "$builddir/src" "$subpkgdir/usr/share/sbcl/source/"
+	cp -r "$builddir/contrib" "$subpkgdir/usr/share/sbcl/source/"
 }
 
 sha512sums="
-e316bda351299e1a797eff1e11f90dc542c03e402b000f5ba10797ff6384b8e936c2d8fb0bdf411b45f6c2ef2dd6c4727b9eed8f18fc2f61bb4eea562421c15e  sbcl-2.5.1.tar.bz2
+2b1abc173a62b38b7edb9067e480780ed0ad31b8e7844320d174fc0e5bb4487635ca3af4dbb6274916b4283f3f3d8146f11c963d07720b0c42a7d2a86c1093a8  sbcl-2.5.3.tar.bz2
 549cc9936ddbd4c19067a455dfad151bd0ce59200b2dce761de67e259e621e4174beefaa5a322886bcd731d2470d229a3e1b75a55a194c54e2feb7c0bcdffb37  ppc-musl.patch
 c5b23ac36478943370156e8a499393c6923a069d8a38e4bf3b651ea91521353398cd813ef18dbcf9e76e97a24bfd85fb1d9cfb8da90951345a6f7ab0d28d65fc  musl-time64.patch
 "
