--- a/testing/mir/APKBUILD
+++ b/testing/mir/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Luca Weiss <luca@lucaweiss.eu>
 pkgname=mir
-pkgver=2.15.0
-pkgrel=6
+pkgver=2.20.2
+pkgrel=0
 pkgdesc="Mir Display Server"
 url="https://mir-server.io"
 arch="all"
@@ -49,12 +49,7 @@ checkdepends="
 	grep
 	wlcs
 	"
-source="https://github.com/MirServer/mir/releases/download/v$pkgver/mir-$pkgver.tar.xz
-	0001-Fix-the-signature-of-drmModeCrtcSetGamma.patch
-	0002-Drop-unused-dependency-on-gflags.patch
-	0003-Strip-out-the-glog-example.patch
-	0004-Missing-algorithm-header-for-gcc14.patch
-	"
+source="https://github.com/MirServer/mir/releases/download/v$pkgver/mir-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-demos $pkgname-test-tools:test_tools"
 options="!check" # some tests fail/hang currently, to be debugged
 
@@ -85,15 +80,15 @@ dev() {
 
 demos() {
 	pkgdesc="$pkgdesc - demonstration programs"
-	amove usr/bin/miral-shell
-	amove usr/bin/miral-kiosk
+	amove usr/bin/mir-x11-kiosk
+	amove usr/bin/mir-x11-kiosk-launch
 	amove usr/bin/miral-app
-	amove usr/bin/miral-terminal
-	amove usr/bin/mir-shell
+	amove usr/bin/miral-kiosk
+	amove usr/bin/miral-shell
 	amove usr/bin/miral-system-compositor
+	amove usr/bin/miral-terminal
 	amove usr/share/applications/miral-shell.desktop
-	amove usr/share/wayland-sessions/mir-shell.desktop
-	amove usr/share/icons/hicolor/scalable/apps/ubuntu-logo.svg
+	amove usr/share/icons/hicolor/scalable/apps/spiral-logo.svg
 }
 
 test_tools() {
@@ -109,9 +104,5 @@ test_tools() {
 }
 
 sha512sums="
-b8a5ed4326a6257595873c35d683a343fc96840d1b2824af6478c59db44cc8d0eea9984b74db09ae101885d457d83fa4faa37992b755b92f3e7712b1c09072cd  mir-2.15.0.tar.xz
-e1e9884a6537419e7d2ca85c03b8dbc1225fc1eed6aaa8d9908eaf84cd1c5776ef393f55fe14f2328686e11aa9a246da0f79d431f564ba69106f418da4a66127  0001-Fix-the-signature-of-drmModeCrtcSetGamma.patch
-fa5762030ae82fb7c85f9f8edbd2f477da0a4790ff27af557815f91a40d7184d96f0789faabab79988a0fbe374f7cddc5dcd416ffb6930c7ffcf7b4d362b4538  0002-Drop-unused-dependency-on-gflags.patch
-4442d3bfe401eb6a63634e2c84b85c0d18d48e50f94328d094bd618980abe43b305a3ef46461dbd22c4693ee5c130fb509b4550acc8c18409be0b69b77909af4  0003-Strip-out-the-glog-example.patch
-210b3c8b5336651610d2ecf32f1d734e204a668193f5f1746fce9ca7d3f237a025d7fb849b1b5ef80a8e08b07627541bd1d8c3f7be5b8c3803f08c3988d4f335  0004-Missing-algorithm-header-for-gcc14.patch
+846ea0a3d7027e5dc52be7823fa7221e191b1a56bb68fa62114782ac82fe6b2c115632a51f28b910cd6319b93054b0856017cad6e69a87a3a8001d5ea60b99d9  mir-2.20.2.tar.xz
 "
