community/mise: upgrade to 2025.3.6, take over maintainership

--- a/community/mise/APKBUILD
+++ b/community/mise/APKBUILD
@@ -1,37 +1,59 @@
-# Maintainer: Jeff Dickey <alpine@mise.jdx.dev>
+# Contributor: Jeff Dickey <alpine@mise.jdx.dev>
+# Contributor: Fabricio Silva <hi@fabricio.dev>
+maintainer="Fabricio Silva <hi@fabricio.dev>"
 pkgname=mise
-pkgver=2024.11.37
+pkgver=2025.3.6
 pkgrel=0
 pkgdesc="Polyglot runtime and dev tool version manager"
 url="https://mise.jdx.dev/"
 arch="all"
 license="MIT"
-makedepends="cargo bash direnv cargo-auditable openssl-dev lua5.1-dev"
+makedepends="
+	cargo
+	cargo-auditable
+	direnv
+	openssl-dev
+	lua5.1-dev
+	bzip2-dev
+	zstd-dev
+	"
 subpackages="$pkgname-doc"
-provides="rtx=$pkgver-r$pkgrel"
-replaces="rtx"
 source="$pkgname-$pkgver.tar.gz::https://github.com/jdx/mise/archive/refs/tags/v$pkgver.tar.gz"
+options="net" # cargo fetch
+provides="rtx=$pkgver-r$pkgrel" # backwards compatibility
+replaces="rtx"
 
 prepare() {
 	default_prepare
+
+	# Rust target triple
+	local target=$(rustc -vV | sed -n 's/host: //p')
+
+	# build against system-provided libs
+	mkdir -p .cargo
+	cat >> .cargo/config.toml <<-EOF
+		[target.$target]
+		bzip2 = { rustc-link-lib = ["bz2"] }
+		zstd = { rustc-link-lib = ["zstd"] }
+	EOF
+
 	cargo fetch --target="$CTARGET" --locked
 }
 
 build() {
-	cargo auditable build --release --frozen --bin mise --no-default-features
+	cargo auditable build --release --frozen --no-default-features --features native-tls
 }
 
 check() {
-	cargo test --frozen --no-default-features
+	cargo test --frozen --no-default-features --features native-tls
 }
 
 package() {
-	install -Dm755 target/release/mise -t "$pkgdir/usr/bin/"
-	install -Dm644 README.md docs/*.md -t "$pkgdir/usr/share/doc/$pkgname"
-	install -Dm644 LICENSE -t "$pkgdir/usr/share/licenses/$pkgname"
-	install -Dm644 "man/man1/$pkgname.1" -t "$pkgdir/usr/share/man/man1"
+	install -Dm755 target/release/mise -t "$pkgdir"/usr/bin/
+	install -Dm644 man/man1/*.1 -t "$pkgdir"/usr/share/man/man1/
+	install -Dm644 LICENSE -t "$pkgdir"/usr/share/licenses/$pkgname/
 }
 
 sha512sums="
-46dba5277089e4a317bbd03397d1554b466b51c5317cc6d992d4a5bf6bdd6b21bece403c16796ed3f47690b395691f0754e64fb85854a25a1f4d50378ac472a2  mise-2024.11.37.tar.gz
+aa53df87355bad4c8a7ef83fc226ccee1a8a50d28f14d97db59ffbbd091e6f96292bd7fd630236e9298f825a55e87ac9d3cc15236ae79a66241a9f237a9e6719  mise-2025.3.6.tar.gz
 "
