--- a/community/py3-pytest-aiohttp/APKBUILD
+++ b/community/py3-pytest-aiohttp/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Antoine Fontaine <antoine.fontaine@epfl.ch>
 # Maintainer: Patrycja Rosa <alpine@ptrcnull.me>
 pkgname=py3-pytest-aiohttp
-pkgver=1.0.5
-pkgrel=3
+pkgver=1.1.0
+pkgrel=0
 pkgdesc="pytest plugin for aiohttp support"
 url="https://github.com/aio-libs/pytest-aiohttp/"
 arch="noarch"
@@ -10,14 +10,20 @@ license="Apache-2.0"
 depends="py3-aiohttp py3-pytest-asyncio"
 makedepends="py3-setuptools py3-setuptools_scm py3-wheel py3-gpep517"
 subpackages="$pkgname-pyc"
-source="https://files.pythonhosted.org/packages/source/p/pytest-aiohttp/pytest-aiohttp-$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/aio-libs/pytest-aiohttp/archive/refs/tags/v$pkgver.tar.gz"
 builddir="$srcdir/pytest-aiohttp-$pkgver"
-options="!check" # no testsuite
 
 build() {
+	export SETUPTOOLS_SCM_PRETEND_VERSION=$pkgver
 	gpep517 build-wheel \
 		--wheel-dir .dist \
 		--output-fd 3 3>&1 >&2
+}
+
+check() {
+	python3 -m venv --clear --without-pip --system-site-packages .testenv
+	gpep517 install-wheel --destdir .testenv --prefix '' .dist/*.whl
+	.testenv/bin/python3 -m pytest
 }
 
 package() {
@@ -26,5 +32,5 @@ package() {
 }
 
 sha512sums="
-b8421c63e4d5caa9742a013a6d1fd3c010b5e4a48e4f5c1a07ddfb7b05853ce6a7a0d65ce78493fd607f59c669d31c75d97a9022048e6a60cbc90a19a48dd02c  pytest-aiohttp-1.0.5.tar.gz
+7f4362c9ef2ef4b63c5f9ef246f59bef78f4962df9878e81bfd4f70f5dccd1eaae1b08cf1389bcdf6d8b9efc2363415b16bcf071aac5e6a640940da12ffb35c3  py3-pytest-aiohttp-1.1.0.tar.gz
 "
