--- a/community/qt5-qtwebengine/APKBUILD
+++ b/community/qt5-qtwebengine/APKBUILD
@@ -3,9 +3,9 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=qt5-qtwebengine
 pkgver=5.15.17
-pkgrel=6
+pkgrel=7
 # latest commit of 87-based branch of qtwebengine-chromium
-_chromium_commit="a5e3030056f7a1470067ad6460ab2f0ee6f9c0a4"
+_chromium_commit="6d29e9cfcfffa7632cc3858ceaf8940677ba9c91"
 pkgdesc="Qt5 - QtWebEngine components"
 url="https://doc.qt.io/QT-5/qtwebengine-index.html"
 # ppc64le, riscv64, s390x and loongarch64 are not supported
@@ -102,12 +102,25 @@ source="$pkgname-$pkgver-lts.tar.gz::https://github.com/qt/qtwebengine/archive/r
 	silent-ninja.patch
 	ffmpeg5.patch
 	pipewire-0.3.patch
-	python3.12-imp.patch
-	python3.12-six.patch
 	"
 builddir="$srcdir/qtwebengine-$pkgver-lts"
 
 # secfixes:
+#   5.15.17-r7:
+#     - CVE-2024-11477
+#     - CVE-2024-12694
+#     - CVE-2024-55549
+#     - CVE-2025-0436
+#     - CVE-2025-0762
+#     - CVE-2025-0996
+#     - CVE-2025-0999
+#     - CVE-2025-1426
+#     - CVE-2025-1919
+#     - CVE-2025-2136
+#     - CVE-2025-24201
+#     - CVE-2025-24855
+#     - CVE-2025-2783
+#     - CVE-2025-3619
 #   5.15.17-r6:
 #     - CVE-2024-10827
 #   5.15.17-r5:
@@ -522,7 +535,7 @@ package() {
 
 sha512sums="
 4281238dcc54fe7225b4dc227bec57ccc49a31661f766164514ede1d91258ae43a1dab6c0d6f6545feba36d1c649b0edac359fd8c50d66d8c07c3aedb2f5f257  qt5-qtwebengine-5.15.17-lts.tar.gz
-abc4662a3af19129ae36fa87e21e552f7a6f91e34e87389f1ef7d75e0c18c2a1c28136bef722674cb3d421e8168e3a401e0e35ce89b287df2c548eb66bec5c09  qtwebengine-chromium-a5e3030056f7a1470067ad6460ab2f0ee6f9c0a4.tar.gz
+ed3f745dfed4c4f7245c4b627066812d512508417e3ed771f025307d43e1f71de99f6f16036cf0d3b254088c8b3944d3e21eaaea3375e1d1bd13848230f2067c  qtwebengine-chromium-6d29e9cfcfffa7632cc3858ceaf8940677ba9c91.tar.gz
 c04470c8bf9bae8c9531b8fad54946f03da3ea9ea394b135c1072c77545125800f217f06aa14797352695b83e04dc71749f777c8a55af12b633edea7c32845c8  0001-pretend-to-stay-at-lower.patch
 2438ac56b1c819d1f6634814b148919e15d7d4e41a64fedab38358d794e8286a1eebaaa8579661e8e75fbc321f4d16c47b1838219cb0aadc307c4c8dd97e91b1  0010-chromium-musl-Match-syscalls-to-match-musl.patch
 08b88858e5fb38bd53ead81f3abbc24dcb26c504798adeb3f7c6ca3b63532279a7a40aa75f601d2e2ac02058e86589a155d3ef97b51375f560adc268dbf1f805  lfs64.patch
@@ -551,6 +564,4 @@ f4cb20796922b6e26433a18ab2ba5dd8750e8bbfb479e9416a362073c9e6a3ac12ee9e9868f6c933
 75e3d333f0af28a6a0d846ca380036181c4c0bfb083a4b94449b63572bd8da0fdb99a0ad0550801fc5b5bd115278cf894a0883fac1147c7a6826f1e6a09475b3  silent-ninja.patch
 01d31c13f15af6b40e0595c7ebe6c13905dd7ae3fd3b564a2e13b538451f14d44081332c9279ece7c9b01a40802e1381e197442f94946cf713ea8cb3326e502f  ffmpeg5.patch
 1fbe738bfa09831df540cff355193d096232eefcf51ddd3be7509e1c63e5107bd8087179140ce84bc67a901795cd804a8e538a32fadc776608b9914dab617c3f  pipewire-0.3.patch
-10015b012d025ff9424fedcc257568c9682b4a669af901acb3e672997ee75e28d8431d8d6115405dd86a37c1ae9565c235711569942635b6e140189235dc231e  python3.12-imp.patch
-4d6b5eda2ce9be44cc9c7bfdb3fd41ffa87ac260d37d30e7af6f4ff7d5ebbf10b17b6119729bbf51f6405494189f82602c657daa139338526b49db89fb8ec682  python3.12-six.patch
 "
