community/pipewire: add user service for pipewire and pipewire-pulse

--- a/community/pipewire/APKBUILD
+++ b/community/pipewire/APKBUILD
@@ -2,7 +2,7 @@
 maintainer="team/alpine-desktop <bribbers@disroot.org>"
 pkgname=pipewire
 pkgver=1.4.1
-pkgrel=0
+pkgrel=1
 _so_ver=0.3
 pkgdesc="Multimedia processing graphs"
 url="https://pipewire.org/"
@@ -47,6 +47,7 @@ subpackages="
 	$pkgname-doc
 	$pkgname-alsa
 	$pkgname-pulse
+	$pkgname-pulse-openrc:pulse_openrc
 	$pkgname-jack
 	$pkgname-jack-dev:jackdev
 	$pkgname-dev
@@ -58,11 +59,14 @@ subpackages="
 	$pkgname-spa-tools:spa_tools
 	$pkgname-lang
 	$pkgname-echo-cancel:echo_cancel
+	$pkgname-openrc
 	"
 install="$pkgname.post-upgrade $pkgname.post-install"
 source="https://gitlab.freedesktop.org/PipeWire/pipewire/-/archive/$pkgver/pipewire-$pkgver.tar.gz
 	pipewire.desktop
 	pipewire-launcher.sh
+	pipewire.initd
+	pipewire-pulse.initd
 	"
 
 case "$CARCH" in
@@ -113,6 +117,9 @@ package() {
 
 	install -Dm644 "$srcdir"/pipewire.desktop -t "$pkgdir"/etc/xdg/autostart/
 	install -Dm755 "$srcdir"/pipewire-launcher.sh "$pkgdir"/usr/libexec/pipewire-launcher
+
+	install -Dm755 "$srcdir"/pipewire.initd "$pkgdir"/etc/user/init.d/pipewire
+	install -Dm755 "$srcdir"/pipewire-pulse.initd "$pkgdir"/etc/user/init.d/pipewire-pulse
 }
 
 alsa() {
@@ -143,7 +150,11 @@ pulse() {
 	amove usr/lib/pipewire-$_so_ver/libpipewire-module-filter-chain.so
 	amove usr/share/pipewire/pipewire-pulse.conf
 	amove usr/share/pipewire/pipewire-pulse.conf.avail
+}
 
+pulse_openrc() {
+	install_if="$pkgname-pulse openrc"
+	amove etc/user/init.d/pipewire-pulse
 }
 
 jack() {
@@ -239,5 +250,7 @@ libs() {
 sha512sums="
 f14964153d2f07e70e10a1a17e53354639cab736dc4290d530a9762f739d50f812033e50718bef036b993664532fccec85bc762d8e4a887be1a10b8fb4249984  pipewire-1.4.1.tar.gz
 b70b05151bcf4b7f13d68b2731d789b9c062fadfcb91f4ed6bdb0d495390b0010f57034fb115a053e1459c7d9ea27523ca1c0c69639aeeb96c17ebac8dfc5b57  pipewire.desktop
-6f4322d306bef346187778fc0975d608fdd37d4c8e08815a0aed28ef7e07c3f21d6a80b70743d0f867bdc237f5e1dc28131c778e7a45e363e5677668ce7acdb1  pipewire-launcher.sh
+1ab91358462f079f215f09728f3efb22e6e5a83d035740933f9536a907ef842642f9b2394233b7848dfe72c323df2a9e5c76640f3a574fc86391f68b04b91a7f  pipewire-launcher.sh
+d3cbe05f621b42beabfad1abfca9f2acb4dfa73489bfd6bdcfd6331c7e35f62c6447ae6f08db8b4ac7b682e73f55a1a679dc8122d4cc7a7d43a39bdd5f55025f  pipewire.initd
+eff6ce635d47f801a845cf6774d909b2eaf64a83e59919d4dd47955d51f1c6e2f12e7d8c6972766829101e4aa920d622fea9806ea2b27d915e3f58f4f48128bb  pipewire-pulse.initd
 "
