community/wireplumber: add user service

--- a/community/wireplumber/APKBUILD
+++ b/community/wireplumber/APKBUILD
@@ -1,8 +1,7 @@
-# Contributor: Bart Ribbers <bribbers@disroot.org>
-# Maintainer: team/alpine-desktop <bribbers@disroot.org>
+maintainer="team/alpine-desktop <bribbers@disroot.org>"
 pkgname=wireplumber
 pkgver=0.5.8
-pkgrel=0
+pkgrel=1
 pkgdesc="Session / policy manager implementation for PipeWire"
 url="https://pipewire.org/"
 arch="all"
@@ -30,8 +29,11 @@ subpackages="
 	$pkgname-lang
 	$pkgname-zsh-completion
 	$pkgname-doc
+	$pkgname-openrc
 	"
-source="https://gitlab.freedesktop.org/PipeWire/wireplumber/-/archive/$pkgver/wireplumber-$pkgver.tar.gz"
+source="https://gitlab.freedesktop.org/PipeWire/wireplumber/-/archive/$pkgver/wireplumber-$pkgver.tar.gz
+	wireplumber.initd
+	"
 
 provides="pipewire-session-manager"
 provider_priority=50
@@ -59,6 +61,8 @@ check() {
 
 package() {
 	DESTDIR="$pkgdir" meson install --no-rebuild -C output
+
+	install -Dm755 "$srcdir"/wireplumber.initd "$pkgdir"/etc/user/init.d/wireplumber
 }
 
 logind() {
@@ -76,4 +80,5 @@ logind() {
 
 sha512sums="
 8fa1b3acd6abf6e18c473f7abcb148946e53632feb7d1c1f3b5c32a84b85019092d38c8b500266ab8f5aef82331256d45561dbc72fa963577a2791ed99a344c4  wireplumber-0.5.8.tar.gz
+49498bf81297e0816c871324d20d6174fb30b7ce564f9a4d4975f141e5829308c6a7d99d96a3a20773e40aa9f3492ce34e9cf10ccd9e125b6b8ac49107d99e57  wireplumber.initd
 "
