--- a/community/keepassxc/APKBUILD
+++ b/community/keepassxc/APKBUILD
@@ -4,8 +4,8 @@
 # Contributor: Max Rees <maxcrees@me.com>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=keepassxc
-pkgver=2.7.9
-pkgrel=1
+pkgver=2.7.10
+pkgrel=0
 pkgdesc="Community-driven port of the Windows application Keepass Password Safe"
 url="https://keepassxc.org/"
 arch="all"
@@ -32,7 +32,7 @@ makedepends="
 	samurai
 	zlib-dev
 	"
-checkdepends="dbus xvfb-run"
+checkdepends="dbus xclip xvfb-run"
 install="$pkgname.post-upgrade"
 subpackages="
 	$pkgname-doc
@@ -40,7 +40,8 @@ subpackages="
 	$pkgname-autotype
 	$pkgname-firefox-manifest:_firefox_manifest:noarch
 	"
-source="https://github.com/keepassxreboot/keepassxc/releases/download/$pkgver/keepassxc-$pkgver-src.tar.xz
+source="https://github.com/keepassxreboot/keepassxc/archive/refs/tags/$pkgver/keepassxc-$pkgver.tar.gz
+	tests.patch
 	doc-path.patch
 	org.keepassxc.keepassxc_browser.json
 	"
@@ -67,8 +68,7 @@ build() {
 }
 
 check() {
-	# v2.7.9 TestCli::testClip() Compared values are not the same
-	xvfb-run -a ctest --test-dir build -E 'testcli' -j1
+	QT_QPA_PLATFORM=xcb xvfb-run -a ctest --test-dir build -j1
 }
 
 package() {
@@ -111,7 +111,8 @@ _firefox_manifest() {
 }
 
 sha512sums="
-255102d3b3723a80cdd5f14cde2130b37807db226b48e985bcc2ab537b482e3fb23afde331e15ed02727e98b526d894aa4567f2e82039a2ad9d33a6ad9ea08a4  keepassxc-2.7.9-src.tar.xz
+265edbafdfd2951219fac8f28fe72672be798dbd93242d6b6d528a017adfed2f16f98ad753b6cdff0eca3f4d7158c9de87aa626ff7e66d3bac470595e248e271  keepassxc-2.7.10.tar.gz
+17b70ceffd0f70a83fc64c607db3019548e16ca3101e101300d7e930842664936759bbfe06a4a872b436feccc2e7a4b203de8ea47abfa151bd23d8eddaa3b858  tests.patch
 f1d1978db4da56064f6f7eb37f61f82169020afc18de3be4afbe46f6bbb6292cc9551bf07a454a89bc5b09ebe72a153f08bff9f62492e3c1b69b6919da8be94e  doc-path.patch
 977f1f76c8c7be819b51417481664bf22d3138978f450bf2b762ebad8f4aee7f6384f090f66b5bee8c0a2a182d4f578c1c4c6cd9a2d80ab65716e24c65d43aee  org.keepassxc.keepassxc_browser.json
 "
